Fix section style allow flex wrap

--- a/style.css
+++ b/style.css
@@ -75,14 +75,17 @@ a {
 }
 .images {
     display: flex;
-    gap: 40px;
+    gap: 50px;
     margin: 0 100px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .img-bloc {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 10px;
+    flex: 0 1 15%;
 }
 .image {
     border: 3px solid #3882f6;
